@@ -1,0 +1,14 @@
+#!/bin/sh
+# grep must ignore --devices=ACTION (-D) when reading stdin
+# For grep-2.11, this test would fail.
+
+. "${srcdir=.}/init.sh"; path_prepend_ ../src
+
+# Test both with no file argument, and with "-".
+echo foo | grep -D skip foo - || fail=1
+echo foo | grep --devices=skip foo || fail=1
+
+# It's more insidious when the skip option is via the envvar:
+echo foo | GREP_OPTIONS=--devices=skip grep foo || fail=1
+
+Exit $fail
